examples/test/testpolicy16445.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16445
  namespace: namespace138
spec:
  podSelector:
    matchLabels:
      key31: value7
      key48: value20
      key41: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value29
          key34: value41
          key48: value4
      podSelector:
        matchLabels:
          key9: value15
